--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@ permalink: /
           {% for section in site.data.landing %}
           <li>
             {% if section.page %}
-              <a class="page-scroll" href="{{ section.page}} ">
+              {% if section.name == 'Blog' %}
+                <a class="page-scroll" href="{{ section.page}} " id = "blog" style:"color: #fff !important;">
+              {% else %}
+                <a class="page-scroll" href="{{ section.page}} " style:"color: #fff !important;">
+              {% endif %}
             {% else %}
-              <a class="page-scroll" href="{{ section.id | prepend: '#'}} ">
+              <a class="page-scroll" href="{{ section.id | prepend: '#'}} " style:"color: #fff !important;">
             {% endif %}
               <span data-i18n="{{ section.i18n }}">{{ section.name }}</span>
             </a>
