Added video carousel and removed github calendar.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ permalink: /
   {% include sections/{{section.tpl}} %}
 </section>
 {% endfor %}
-<style>
+<!-- <style>
 iframe {
   -moz-transform: scale(0.25, 0.25);
   -webkit-transform: scale(0.25, 0.25);
@@ -72,5 +72,5 @@ iframe {
   -ms-transform-origin: top left;
   transform-origin: top left;
 }
-</style>
+</style> -->
 <!-- <iframe src="https://www.maimemo.com/share/page/?uid=779139&pid=660" style="display: none;"></iframe> -->
